kite-core: replace Tool's 9-arg constructor with kind-specific factories
Tool.function(...) and Tool.delegate(...) replace the package-private
constructor that callers padded with null/false. Drop the dead Kind.ROUTE
enum value and the runtime readOnly+kind check it enabled — the bad
combination is now unrepresentable. Inline the Tools access shim and
share the empty-params schema literal that RunnerCore duplicated.